--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
 </head>
 <body>
 
-    <div class="container">
-        <img src="jouw-hoofdfoto.png" alt="Illustratie" class="main-illustration">
+    <div class="main-container">
+        <img src="hoofd-illustratie.png" alt="Illustratie" class="side-image">
 
-        <header>
+        <div class="content">
             <h1>Irismier Illustrations</h1>
-        </header>
 
-        <nav class="button-menu">
-            <a href="over-mij.html" class="btn btn-right">Over mij</a>
-            <a href="opdrachten.html" class="btn btn-far-right">Opdrachten</a>
-            <a href="schilderijen.html" class="btn btn-center">Schilderijen</a>
-            <a href="tekeningen.html" class="btn btn-right">Tekeningen</a>
-            <a href="contact.html" class="btn btn-center contact-btn">Contact</a>
-        </nav>
+            <nav class="menu">
+                <a href="over-mij.html" class="btn pos-1">Over mij</a>
+                <a href="opdrachten.html" class="btn pos-2">Opdrachten</a>
+                <a href="schilderijen.html" class="btn pos-3">Schilderijen</a>
+                <a href="tekeningen.html" class="btn pos-4">Tekeningen</a>
+                <a href="contact.html" class="btn pos-5">Contact</a>
+            </nav>
+        </div>
+        
+        <img src="hond-lijntekening.png" alt="Hond tekening" class="bottom-image">
     </div>
 
 </body>
+</html>
 </html>
