Update form action URL in contact.html

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <h1>Contact</h1>
         <p>Heb je een vraag of wil je een opdracht bespreken? Stuur me gerust een berichtje!</p>
 
-        <form action="https://formspree.io/f/JOUW_EMAIL_HIER" method="POST" class="contact-form">
+        <form action="https://formspree.io/f/meeleqdr" method="POST" class="contact-form">
             <div class="form-group">
                 <label for="name">Naam:</label>
                 <input type="text" id="name" name="name" required placeholder="Je naam">
